<resources>
    <string name="app_name" translatable="false">Taken</string>
    <string name="old_password">Old PIN</string>
    <string name="new_password">New PIN</string>
    <string name="new_password_repeat">Repeat New PIN</string>
    <string name="fill_in">Fill in</string>
    <string name="confirm">Confirm</string>
    <string name="set_value">Please set the value</string>
    <string name="passwords_equals">PINs should be the same</string>
    <string name="wrong_length">Please fill in 4 digits</string>
    <string name="incorrect_existing">Incorrect existing PIN</string>
    <string name="incorrect_password">Incorrect PIN</string>
    <string name="start">start</string>
    <string name="enter_pin">Enter a PIN to stop tracking</string>
    <string name="instantly">Instantly</string>
    <string name="_5_seconds">5 seconds</string>
    <string name="_10_seconds">10 seconds</string>
    <string name="_20_seconds">20 seconds</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="_60_seconds">60 seconds</string>
    <string name="get_info">To get more details click on the next icon above</string>
    <string name="start_checking_after">Start tracking after</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="password_not_set_first_start">You haven\'t specified your PIN, do it before tracking</string>
    <string name="back">&#160;&#160;&#160;Back&#160;&#160;&#160;</string>
    <string name="app_bar_update_pin">Update your PIN</string>
    <string name="new_pin_view_new_pin">New PIN</string>
    <string name="password_saved">PIN saved, try to start tracking again!</string>
    <string name="app_bar_create_your_pin">Create your PIN</string>
    <string name="app_bar_enter_your_pin">Enter your PIN</string>
    <string name="info_activity">Info about this app</string>
    <string name="info_activity_text">
This application allows you to track the change in the position of your smartphone in space.\n\n
When the application notices this behavior, is starts sending notifications every 2 seconds. Turn on app notifications on your smartwatch or smart bracelet so that app notifications reach you and do their job.\n\n
The first time you use it, you will need to set a PIN code to stop tracking. It can also be changed later in the application settings.\n\n
You can select the time interval after which tracking of the smartphone\'s position will start. This will allow you to put your smartphone where you want it to be without moving.\n\n
You can specify the sensitivity with which the application will recognize movement in space. With maximum sensitivity, the slightest movement will be identified. While with minimal, someone can shift your smartphone a little.\n\n
You can specify whether to interrupt tracking when unlocking the smartphone screen by selecting the appropriate option on the main screen of the application.\n\n
The application should continue to work when unloaded from the list of running applications, but check this point before real use at your smartphone.\n\n
The functionality of this application can be useful if you are afraid that someone might take your smartphone, for example, when you work out at the gym, or left it on the table in the office and went into the next room. Or, for example, if you do not want children to take it without your permission.\n\n
If you suddenly find a problem or the application freezes, restart your smartphone and let me know through the Google Play.
Good luck and happy use!
    </string>
    <string name="happy_smile">(happy smile)</string>

    <string name="sensor_not_found">Needed sensors not found</string>
    <string name="attention">Attention!</string>
    <string name="someone_taken">Someone took your phone</string>
    <string name="position_saved">Position saved</string>
    <string name="dont_worry">Don\'t worry about your smartphone</string>
    <string name="tracking_stopped">Tracking stopped</string>
    <string name="password_accepted">PIN successfully entered</string>
    <string name="screen_unlocked">Screen was unlocked</string>
    <string name="channed_description">Channel for notification of user</string>
    <string name="tarcking_state_progress">Tracking state of your phone</string>
    <string name="tracking_error">Tracking start error</string>
    <string name="stop_tracking_on_unlock">Stop tracking when screen is unlocked</string>
    <string name="permission_error">Please allow notifications for Taken in the Settings of your device</string>
</resources>