<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:menu="@menu/menu"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/takenScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/delay_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/delayText"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/start_checking_after"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/radios" />

                    <RadioGroup
                        android:id="@+id/radios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@id/fivesec"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/delayText">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/instantly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="0.5"
                            android:text="@string/instantly" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/fivesec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="5"
                            android:text="@string/_5_seconds" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/tensec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="10"
                            android:text="@string/_10_seconds" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/twentysec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="20"
                            android:text="@string/_20_seconds" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/thirtySec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="30"
                            android:text="@string/_30_seconds" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sixtySec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="60"
                            android:text="@string/_60_seconds" />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/seek_bar_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="1dp"
                app:layout_constraintTop_toBottomOf="@id/delay_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/sensitivityTitle"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sensitivity"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/seekBar" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:value="5"
                        android:stepSize="1"
                        android:valueFrom="0"
                        android:valueTo="10"
                        app:layout_constraintTop_toBottomOf="@id/sensitivityTitle" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/seekBar">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/from"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:text="@string/low"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/to"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:gravity="end"
                            android:text="@string/high"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/checkbox_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:strokeColor="?attr/colorOutline"
                app:strokeWidth="1dp"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_card_view"
                app:layout_constraintBottom_toTopOf="@id/info_message">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/stop_on_unlock_chkbx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_tracking_on_unlock"
                    app:layout_constraintTop_toBottomOf="@id/seek_bar_card_view"
                    app:layout_constraintBottom_toTopOf="@id/startButton"
                    android:padding="16dp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_message"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/get_info"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/checkbox_wrapper"
                app:layout_constraintBottom_toTopOf="@id/startButton"
                app:drawableBottomCompat="@drawable/ic_baseline_info_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="15dp"
                android:text="@string/start"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>